28/03/2023:
	- Added support for pyramid resolutions stored within SubIFDs for TIFF images. This allows for support for image
	  stacks or sequences consisting of different images stored as a single multi-page TIFF. Each image has it's own
	  set of pyramid resolutions and each image within the stack can be accessed using the existing IIP SDS command.
	  for example SDS=3 for the 4th image in the stack. Enables support for pyramid OME-TIFF whole-slide microscopy
	  image stacks. Also added OBJ=stack command to get the list of stack images and scale in JSON.


23/03/2023:
	- Make sure the PNG filter type is always initialized: code moved from setQuality() to class constructor


22/03/2023:
	- Added partial support for non-interleaved planar configuration TIFFs where each color channel is stored separately.
	  For the moment, only the first channel is returned for such images.


12/03/2023:
	- Re-aligned metadata field names to Dublin Core norms and changed encoding to plain text for non-core IIP metadata
	  requests - allows requests like OBJ=description or OBJ=xmp. Also added new "metadata" argument to OBJ command
	  (OBJ=metadata) to export all available metadata in JSON format


09/03/2023:
	- Added ability to handle TIFF files with differing tile sizes at each resolution level.
	- Moved tile cropping out of TileManager and directly into RawTile class.


03/03/2023:
	- Added Compressor constructer with inline initialization and checks in JPEG and PNG classes for whether DPI is set


02/03/2023:
	- Fixed free space calculation in JPEGCompressor causing corruption when tile sizes are very small and the working
	  buffer is too small


07/01/2023:
	- Added extra Kakadu version check as the metadata handling code does not compile with old versions of Kakadu


12/01/2023:
	- Fixed typo in configure script (https://github.com/ruven/iipsrv/issues/249). Thanks @irv


03/01/2023:
	- Fixed potential integer overflow errors in View.cc and CVT.cc


07/12/2022: