@@ -393,6 +393,12 @@ class IIPImage {
     return metadata[index];
   };
 
+  /// Return physical resolution (DPI) in pixels/meter horizontally
+  const float getHorizontalDPI() const { return (dpi_units==2) ? dpi_x*10.0 : ( (dpi_units==1) ? dpi_x*25.4 : dpi_x ); };
+
+  /// Return physical resolution (DPI) in pixels/meter vertically
+  const float getVerticalDPI() const { return (dpi_units==2) ? dpi_y*10.0 : ( (dpi_units==1) ? dpi_y*25.4 : dpi_y ); };
+
   /// Return whether this image type directly handles region decoding
   virtual bool regionDecoding(){ return false; };
 
